Bug 29274 - __read_chk is not a cancellation point
Summary: __read_chk is not a cancellation point
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: nptl (show other bugs)
Version: 2.26
: P2 normal
Target Milestone: 2.36
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-06-22 09:31 UTC by Andreas Schwab
Modified: 2022-06-22 15:03 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schwab 2022-06-22 09:31:11 UTC
When HAVE_INLINED_SYSCALLS is defined, __read_chk does not enable async cancellation around the read syscall.
Comment 1 Andreas Schwab 2022-06-22 15:03:48 UTC
Fixed in 2.36.